More social feed testing
make the feed commits updates

Discovered the FriendSourcedTrieNode never commits a cache!